--- a/papers/templates/partials/_save_button.html
+++ b/papers/templates/partials/_save_button.html
@@ -1,4 +1,4 @@
-<div id="save-btn-{{ paper.id }}">
+<div id="save-btn-{{ paper.id }}" >
     {% if is_saved %}
     <form 
         hx-post="{% url 'unsave_paper' paper.id %}" 
@@ -8,7 +8,7 @@
                htmx.ajax('GET', '{% url 'toast' %}?message=Paper removed!', '#toast-container')"
     >
         {% csrf_token %}
-        <button type="submit" class="btn btn-netiral w-full">
+        <button class="btn btn-soft bg-white text-sm p-4 dark:bg-zinc-800 border border-gray-200 dark:border-zinc-800 text-gray-800 dark:text-zinc-200">
             Unsave Paper
         </button>
     </form>
@@ -21,7 +21,7 @@
                htmx.ajax('GET', '{% url 'toast' %}?message=Paper saved!', '#toast-container')"
     >
         {% csrf_token %}
-        <button type="submit" class="btn btn-neutral w-full">
+        <button class="btn btn-soft bg-white text-sm p-4 dark:bg-zinc-800 border border-gray-200 dark:border-zinc-800 text-gray-800 dark:text-zinc-200">
             Save Paper
         </button>
     </form>
